[package]
name = "dbank"
version = "0.1.0"
authors = ["Phili <lshoo36@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "bollar.wasm",
  "bollar-hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
mt = ["library", "anyhow", "cw-multi-test"]

# [package.metadata.scripts]
# optimize = "./scripts/optimizer.sh"
# optimize = """docker run --rm -v "$(pwd)":/code \
#   --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
#   --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
#   cosmwasm/optimizer:0.16.1
# """
# backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true}
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = "2"
cw20-base = { version = "2", features = ["library"]  }
hex-literal = "0.4"
sha2 = { workspace = true }
thiserror = { workspace = true }

# babylon-bindings = { workspace = true }
babylon-bindings      = { path = "../../../babylon-contract/packages/bindings" }

anyhow = { workspace = true, optional = true }
cw-multi-test = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
cw-multi-test = { workspace = true }
# babylon-bindings-test = { workspace = true, version = "0.4.0" } 
babylon-bindings-test      = { path = "../../../babylon-contract/packages/bindings-test" }